--- a/vendor.conf
+++ b/vendor.conf
@@ -32,4 +32,6 @@ golang.org/x/text f21a4dfb5e38f5895301dc265a8def02365cc3d0 # v0.3.0
 golang.org/x/time fbb02b2291d28baffd63558aa44b4b56f178d650
 github.com/xeipuuv/gojsonpointer 4e3ac2762d5f479393488629ee9370b50873b3a6
 github.com/docker/distribution 83389a148052d74ac602f5f1d62f86ff2f3c4aa5
-
+github.com/stretchr/testify v1.2.1
+github.com/davecgh/go-spew v1.1.0
+github.com/pmezard/go-difflib v1.0.0
