Standalone runtime and Stacks API handlers (#15)
* Update StackStore interface

* Standalone runtime and basic Stacks API handlers

* vendor codegangsta/cli

* update readme

--- a/vendor.conf
+++ b/vendor.conf
@@ -10,6 +10,7 @@ github.com/xeipuuv/gojsonpointer 4e3ac2762d5f479393488629ee9370b50873b3a6
 github.com/stretchr/testify v1.2.1
 github.com/davecgh/go-spew v1.1.0
 github.com/pmezard/go-difflib v1.0.0
+github.com/codegangsta/cli v1.18.0
 
 # docker/docker dependencies
 github.com/Azure/go-ansiterm d6e3b3328b783f23731bc4d058875b0371ff8109
