--- a/vendor.conf
+++ b/vendor.conf
@@ -99,3 +99,6 @@ github.com/pkg/errors 645ef00459ed84a119197bfb8d8205042c6df63d # v0.8.0
 
 # cli
 github.com/morikuni/aec 39771216ff4c63d11f5e604076f9c45e8be1067b
+
+# gomock
+github.com/golang/mock 51421b967af1f557f93a59e0057aaf15ca02e29c
